plugins {
  id 'net.fabricmc.fabric-loom' version "${loom_version}"
  id 'maven-publish'
  id "me.modmuss50.mod-publish-plugin" version "2.1.1"
}

version = "${mod_version}+${minecraft_version}"
group = project.maven_group

base {
  archivesName = project.archives_base_name
}

repositories {
  maven { url 'https://maven.terraformersmc.com/' }
}

loom {
  runs.configureEach {
    it.jvmArguments.add("-XX:StackShadowPages=32")
  }
}

fabricApi {
  configureDataGeneration {
    client = true
  }
}

dependencies {
  // To change the versions see the gradle.properties file
  minecraft "com.mojang:minecraft:${project.minecraft_version}"

  implementation "net.fabricmc:fabric-loader:${project.loader_version}"

  // Fabric API. This is technically optional, but you probably want it anyway.
  implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

  // Terraform
//  implementation "com.terraformersmc.terraform-api:terraform-wood-api-v1:${project.terraform_version}"
//  include "com.terraformersmc.terraform-api:terraform-wood-api-v1:${project.terraform_version}"

}

processResources {
  inputs.property "version", project.version

  filesMatching("fabric.mod.json") {
    expand "version": inputs.properties.version
  }
}

tasks.withType(JavaCompile).configureEach {
  it.options.release = 25
}

java {
  sourceCompatibility = JavaVersion.VERSION_25
  targetCompatibility = JavaVersion.VERSION_25
}

jar {
  inputs.property "archivesName", project.base.archivesName

  from("LICENSE") {
    rename { "${it}_${inputs.properties.archivesName}" }
  }
}

publishMods {
  def startVersion = "26.3"
  file = jar.archiveFile
  changelog = file("changelog.md").text
  type = STABLE
  modLoaders.add("fabric")

  modrinth {
    accessToken = providers.environmentVariable("MODRINTH_TOKEN")
    projectId = "zFiY2Go0"
    minecraftVersionRange {
      start = startVersion
      end = "${minecraft_version}"
    }
    requires ("fabric-api")
  }

  curseforge {
    accessToken = providers.environmentVariable("CURSEFORGE_TOKEN")
    projectId = "312289"
    displayName = "(${minecraft_version}) Blockus $project.version"
    minecraftVersionRange {
      start = startVersion
      end = "${minecraft_version}"
    }
    requires ("fabric-api")
    client = true
    server = true
  }
}

